--- a/src/app/course/wishlist/wishlist.component.html
+++ b/src/app/course/wishlist/wishlist.component.html
@@ -29,7 +29,7 @@
 
   <div id= "main-content-middle">
       <div id="main-content">
-        <div class="course-main-content" *ngFor = "let course of getWishlistData()">
+        <div class="course-main-content" *ngFor = "let course of wishlist">
           <div class="course-img">
               <img src="/assets/course-generic.png" alt="" srcset="">
           </div>
@@ -47,10 +47,10 @@
           <div class="course-creator">{{course.course_creator}}</div>
 
           <div class="course-options">
-              <div class="discount-price"><strong>Rs. {{course.discounted_price}}</strong></div>
+              <div class="discount-price"><strong>Rs. {{getDiscountedPrice(course)}}</strong></div>
               <div class="original-price" [ngStyle] = "calculateStyle(course)">{{getOriginialPrice(course)}}</div>
-              <div class="add-to-cart" (click)="AddToCart(course.id)">Add to cart</div>
-              <div class="trash-image" (click)="RemoveFromWishlist(course.id)"><img src="/assets/trash-icon.png"></div>
+              <div class="add-to-cart" (click)="AddToCart(course)">Add to cart</div>
+              <div class="trash-image" (click)="RemoveFromWishlist(course)"><img src="/assets/trash-icon.png"></div>
               <div class="arrow-to-course" routerLink="/course-details" (click)="CurrentCourseUpdate(course.id)"><img src="/assets/arrow.svg" alt="" srcset=""></div>
           </div>
 
@@ -65,7 +65,7 @@
                   YOUR CART DETAILS
               </div>
 
-              <div class="cart-course" *ngFor = "let cart_course of getCartData()">
+              <div class="cart-course" *ngFor = "let cart_course of cartItems">
                   <div class="cart-course-details">
                       <div class="cart-course-img">
                           <img src="/assets/course-generic.png" alt="" srcset="">
@@ -76,7 +76,7 @@
                   </div>
 
                   <div class="discount-price-cart">
-                      <strong>Rs. {{cart_course.discounted_price}}</strong>
+                      <strong>Rs. {{getDiscountedPrice(cart_course)}}</strong>
                   </div>
               </div>
 
